--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --no-minify && mkdir -p public && mv dist/* public"
   },
   "dependencies": {
     "@types/react": "^16.9.16",
@@ -12,6 +13,7 @@
     "parcel": "^2.0.0-alpha.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "swr": "^0.1.15",
     "tailwindcss": "^1.1.4",
     "wouter": "^2.4.0"
   }
