--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "parcel:build": "parcel build ./src/index.html && mkdir -p public && mv dist/* public",
-    "build": "echo this is a zeit build script"
+    "build": "parcel build ./src/index.html --out-dir public"
   },
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.7",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "classnames": "^2.2.6",
-    "parcel": "^2.0.0-alpha.3.2",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-babel-typescript": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "swr": "^0.1.15",
