--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "swr": "^0.1.15",
     "tailwindcss": "^1.1.4",
     "wouter": "^2.4.0"
+  },
+  "devDependencies": {
+    "fs-extra": "^8.1.0",
+    "sharp": "^0.23.4"
   }
 }
