--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "parcel build ./src/index.html --out-dir public"
   },
   "dependencies": {
+    "@atlaskit/editor-core": "^115.2.2",
     "@babel/core": "^7.7.7",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "accounting": "^0.4.1",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-babel-typescript": "^1.0.1",
     "react": "^16.12.0",
