--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html --out-dir public"
+    "start": "parcel ./src/index.html --no-source-maps",
+    "build": "parcel build ./src/index.html --no-source-maps --out-dir public"
   },
   "dependencies": {
     "@atlaskit/editor-core": "^115.2.2",
+    "@atlaskit/media-core": "^31.0.1",
+    "@atlaskit/smart-card": "^12.6.2",
     "@babel/core": "^7.7.7",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-react": "^7.7.4",
@@ -21,6 +23,7 @@
     "parcel-plugin-babel-typescript": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-intl": "^3.9.3",
     "swr": "^0.1.15",
     "tailwindcss": "^1.1.4",
     "wouter": "^2.4.0"
