--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel ./src/index.html --no-source-maps",
-    "build": "parcel build ./src/index.html --no-source-maps --out-dir public"
+    "build": "parcel build ./src/index.html --no-source-maps --out-dir public",
+    "minify": "node ./minify-images.js"
   },
   "dependencies": {
     "@babel/core": "^7.7.7",
