--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "parcel ./src/index.html --no-source-maps",
-    "build": "parcel build ./src/index.html --no-source-maps --out-dir public",
+    "start": "cp -r images ./dist/images && parcel ./src/index.html --no-source-maps",
+    "build": "cp -r images ./public/images && parcel build ./src/index.html --no-source-maps --out-dir public",
     "minify": "node ./minify-images.js"
   },
   "dependencies": {
